apps/garage-web/portfolio/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web-jameswynn-com
spec:
  parentRefs:
    - name: envoy-towonel
      namespace: networking
      sectionName: jameswynn-https
  hostnames:
    - "jameswynn.com"
  rules:
    - backendRefs:
        - name: garage-cluster
          namespace: default
          port: 3902
